Magick.NET.Native/MagickImage.h



MAGICK_NET_EXPORT Image *MagickImage_Colorize(const Image *, const PixelInfo *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ColorMatrix(const Image *, const KernelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Compare(Image *, Image *, const size_t, const size_t, double *, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_CompareDistortion(Image *, Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Composite(Image *, const Image *, const ssize_t, const ssize_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CompositeGeometry(Image *, const Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ConnectedComponents(const Image *, const size_t, CCObjectInfo **, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Contrast(Image *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ContrastStretch(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Convolve(const Image *, const KernelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CopyPixels(Image *, const Image *, const RectangleInfo *, const OffsetInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Crop(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_CropToTiles(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CycleColormap(Image *, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Decipher(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Deskew(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Despeckle(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT const size_t MagickImage_DetermineColorType(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Distort(const Image *, const size_t, const MagickBooleanType, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Edge(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Emboss(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Encipher(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Enhance(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Equalize(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_Equals(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_EvaluateFunction(Image *, const size_t, const size_t, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_EvaluateGeometry(Image *, const size_t, const RectangleInfo *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_EvaluateOperator(Image *, const size_t, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Extent(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ExtentGravity(const Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Flip(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Flop(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT TypeMetric *MagickImage_FontTypeMetrics(Image *, const DrawInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT char *MagickImage_FormatExpression(Image *, ImageInfo *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Frame(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Fx(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_GammaCorrect(Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_GaussianBlur(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT const char *MagickImage_GetArtifact(const Image *, const char *);


MAGICK_NET_EXPORT const char *MagickImage_GetAttribute(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_GetBitDepth(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT PixelInfo *MagickImage_GetColormap(const Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_GetNext(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextArtifactName(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextAttributeName(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextProfileName(const Image *);